--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,5 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<link rel="stylesheet" href="/stylesheets/style.css">
+<body>
+<h1 id="h1-principal">{{title}}</h1>
+<button>Check the movies</button>
+<body>
