--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/stylesheets/style.css">
-<body>
+<body id="index">
 <h1 id="h1-principal">{{title}}</h1>
-<button>Check the movies</button>
+<a href="/movies"><button>Check the movies</button></a>
 <body>
