--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,54 @@
-body {
+#index {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-color:white;
+  color:white;
   background:url("/images/cinema.jpg") ;
   background-repeat: no-repeat;
   background-size: auto;
+  background-position: center;
 }
 
 a {
   color: #00B7FF;
+}
+
+#h1-principal{
+
+}
+/*
+white: #f7f9f9;
+light-blue: #2081c3;
+dark-blue: #0a2c42;
+grey: #bfbfbf;
+font-family: Arial, Helvetica, sans-serif;
+*/
+#main-random{
+    display:flex;
+    flex-direction: row;
+    padding :5px;
+}
+.flex{
+    display: flex;
+    flex-direction: row;
+    width: 1200px;
+    flex-wrap: wrap;
+}
+.description{
+    width: 200px;
+    margin: 20px;
+    align-items: stretch;
+color:black;
+
+}
+#nav{height: 30px;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(223, 223, 252);
+    color:white;
+    padding: 50px;
+
+}
+
+a{
+    margin: 10px;
 }
