--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/stylesheets/style.css">
-<body id="index">
+<div id="index">
 <h1 id="h1-principal">{{title}}</h1>
 <a href="/movies"><button>Check the movies</button></a>
-<body>
+<div>
