--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -5,17 +5,14 @@
 
 <div>
     <div>
-        <img src="{{this.image}}" alt="beer" width="150px" height="200px">
+        <img src="{{this.image}}" alt="movie" width="150px" height="200px">
     </div>
     <div class="description">
     
-      <h4>"{{this.title}}"></h4><h4> {{this.dirctor}}</h4>
+     
+       <a href="/movie?id={{this._id}}"><h4> {{this.title}}</h4></a>
     
-        <br>
-        <p> {{this.stars}}</p>
-        <br>
-        <p> {{this.showtimes}}</p>
-        <br>
+        
     </div>
 </div>
 
