all working portotype
all functionality
CSS ugly:)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,17 +12,15 @@
 a {
   color: #00B7FF;
 }
-
-#h1-principal{
-
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
-/*
-white: #f7f9f9;
-light-blue: #2081c3;
-dark-blue: #0a2c42;
-grey: #bfbfbf;
-font-family: Arial, Helvetica, sans-serif;
-*/
+
 #main-random{
     display:flex;
     flex-direction: row;
