--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,8 @@
 <link rel="stylesheet" href="/stylesheets/style.css">
 <div id="index">
+ <div class="center">
 <h1 id="h1-principal">{{title}}</h1>
+
 <a href="/movies"><button>Check the movies</button></a>
-<div>
+</div>
+</div>
